# np-font-mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example-usage.ipynb
src/data/: data-map.json
src/font-mapper-np/: file_loader.py  font_mapper.py  language_detection.py
src/np-font-mapper/: __init__.py  font_mapper.py  language_detection.py
src/np_font_mapper/: __init__.py  data_map.py  font_mapper.py  language_detection.py
